# Iron-Fang

./: .gitmodules  CMakeLists.txt  Doxygen comment formats.txt  LICENSE  README.md
Documentation/: Doxyfile
Documentation/html/: _base_8cpp.html  _base_8h.html  _base_8h.js  _base_8h_source.html  _entry_point_8h.html  _entry_point_8h.js  _entry_point_8h_source.html  _log_8cpp.html  _log_8h.html  _log_8h_source.html  _test_8h.html  _test_8h_source.html  annotated.html  annotated_dup.js  class_iron_fang_1_1_log-members.html  class_iron_fang_1_1_log.html  classes.html  dir_0d70924a09d7d6371b5fe96db79330fb.html  dir_0d70924a09d7d6371b5fe96db79330fb.js  dir_7911088750417d0433c0a05e4e41d4a1.html  dir_7911088750417d0433c0a05e4e41d4a1.js  dir_850789ad89d416c76feb3a38b2275b6f.html  dir_850789ad89d416c76feb3a38b2275b6f.js  dir_9944d755971915b347a6828488491723.html  dir_9944d755971915b347a6828488491723.js  dir_de053912cc3157189877221e61488814.html  dir_de053912cc3157189877221e61488814.js  dir_e5182c062e6d08cc4e9dbef33011eafa.html  dir_e5182c062e6d08cc4e9dbef33011eafa.js  dir_f02717df9acd06f9abb116b6ccdcd3e2.html  dir_f02717df9acd06f9abb116b6ccdcd3e2.js  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  (+10 more)
Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js
Documentation/latex/: _base_8cpp.tex  _base_8h.tex  _entry_point_8h.tex  _log_8cpp.tex  _log_8h.tex  _test_8h.tex  annotated.tex  class_iron_fang_1_1_log.tex  dir_0d70924a09d7d6371b5fe96db79330fb.tex  dir_7911088750417d0433c0a05e4e41d4a1.tex  dir_850789ad89d416c76feb3a38b2275b6f.tex  dir_9944d755971915b347a6828488491723.tex  dir_de053912cc3157189877221e61488814.tex  dir_e5182c062e6d08cc4e9dbef33011eafa.tex  dir_f02717df9acd06f9abb116b6ccdcd3e2.tex  files.tex  main_8cpp.tex  namespace_iron_fang.tex  namespaces.tex  refman.tex
IFEngine/src/Headers/: EntryPoint.h
IFEngine/src/Headers/Core/: Base.h  Log.h
IFEngine/src/Sources/: main.cpp
